--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {%- include head.html -%}
-
-  <body>
-
-    {%- include header.html -%}
-
-    {{ content }}
-
-    {%- include footer.html -%}
-
-    <script src="/assets/js/theme.js"></script>
-
-  </body>
-
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {%- seo -%}
+        <link rel="stylesheet" href="/assets/css/style.css">
+        {%- feed_meta -%}
+        {%- if jekyll.environment == 'production' and site.google_analytics -%}
+          {%- include google-analytics.html -%}
+        {%- endif -%}
+        <script src="/assets/js/theme.js"></script>
+    </head>
+    <body>
+        {{ content }}
+    </body>
 </html>
