--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {%- seo -%}
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/wcd/assets/css/style.css">
         {%- if jekyll.environment == 'production' and site.google_analytics -%}
           {%- include google-analytics.html -%}
         {%- endif -%}
-        <script src="/assets/js/theme.js"></script>
+        <script src="/wcd/assets/js/theme.js"></script>
     </head>
     <body>
         {{ content }}
