--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
         {%- endif -%}
     </head>
     <body>
-        {{ content }}
+        <div class="markdown">
+            {{ content }}
+        </div>
         <script src="/wcd/assets/js/theme.js"></script>
     </body>
 </html>
