try page.markdown

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="markdown">
-            {{ content }}
+            {{ page.markdown }}
         </div>
         <script src="/wcd/assets/js/theme.js"></script>
     </body>
