--- a/src/components/EditOnGithub/EditOnGithub.scss
+++ b/src/components/EditOnGithub/EditOnGithub.scss
@@ -1,4 +1,8 @@
 .edit-on-github {
-    font-size: 12px;
-    border-bottom: 1px solid #eeebee;
+    display: block;
+    margin-top: 16px;
+    border-top: 1px solid #eeebee;
+    padding-top: 16px;
+
+    a { font-size: 12px; }
 }
