--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,13 +1,11 @@
-.main {
-    width: 75%;
-}
-
-.flex {
+.app {
     display: flex;
 }
 
-.container-lg {
-    margin-left: 0;
+.main {
+    width: 100%;
+    padding: 0 16px;
+    overflow: auto;
 }
 
 .a {
@@ -28,8 +26,34 @@
         margin-bottom: 8px;
     }
 
+    pre {
+        overflow: auto;
+    }
+
+    --green: #5c864e;
+    --pink: #ab6ca4;
+    --blue: #6c83b6;
+    --orange: #9e6a34;
+
+    .language-jass, .language-fdf {
+        .hljs-keyword { color: var(--pink); }
+        .hljs-number { color: var(--green); }
+        .hljs-string { color:var(--green); }
+    }
+
     .language-jass {
-        .hljs-keyword { color: #ab6ca4; }
-        .hljs-type { color: #5c864e; }
+        .hljs-type { color: var(--green); }
+    }
+    
+    .language-fdf {
+        .hljs-frametype { color: var(--blue); }
+        .hljs-action { color: var(--orange); }
+    }
+}
+
+@media (min-width: 576px) {
+    .main {
+        width: 75%;
+        padding: 0 16px 0 0;
     }
 }
