fix back & markdown transport

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="/wcd/assets/css/style.css">
     </head>
     <body>
-        <div class="markdown">
+        <script type="text/markdown" class="markdown">
             {{ page.content }}
-        </div>
+        </script>
         <script src="/wcd/assets/js/theme.js"></script>
     </body>
 </html>
